Fix visibility of the search label

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -45,9 +45,15 @@ h3 {
   font-size: 1rem;
 }
 
-.visibility-hidden {
-  visibility: hidden;
-  font-size: 0;
+.visibility-hidden{
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
 }
 
 // Main layout
